--- a/style.css
+++ b/style.css
@@ -1,29 +1,34 @@
 body {
-  width: 50%;
-  text-align: center;
-}
-#centerContainer {
-  width: 700px;
-  text-align: left;
-  margin: 0px auto;
-}
-#grid-item {
-  display: flexbox;
-  border: 0.5px solid black;
-  grid-gap: 0px;
-  gap: 0px;
-  row-gap: 0px;
-  column-gap: 0px;
-}
-#grid-container {
-  grid-gap: 0px;
-  gap: 0px;
-  row-gap: 0px;
-  column-gap: 0px;
+  width: 100vw;
+  height: 100vh;
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
 }
 
-#colorpicker {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: large;
-  font-weight: 400;
+.grid-item {
+  border: 0.1px solid black;
+  grid-gap: 0.1px;
+  gap: 0.5px;
+  row-gap: 0px;
+  column-gap: 0px;
+  background-color: rgb(193, 193, 193);
+}
+#grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  grid-gap: 0px;
+  gap: 0px;
+  row-gap: 0px;
+  column-gap: 0px;
+}
+.refresh-button {
+  background-color: yellow;
+  display: inline-block;
+}
+h1 {
+  color: yellow;
+  font-family: "brush script mt";
 }
